# mwouettes

./: .gitignore  README.md  birdflow  flow_sonify_default.json  mwouettes  pyproject.toml  run.sh
environments/: bord-de-mer.json  espace.json  sous-bois.json  sous-marin.json
samples/: README.md  SOURCES.md
scripts/: download_commons_samples.sh  install_mwouettes_command.sh  migrate_to_folders.sh
src/flow_sonify/: audio.py  capture.py  cli.py  config.py  ip_tracks.py  ui_server.py
src/flow_sonify/web/: __init__.py  app.js  index.html  style.css
